--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -4,9 +4,11 @@ h1 {
   @include for--desktop {
     @include font-styles($font-bold, 3.75rem, 4.25rem, 700);
   }
+
   @include for--tablet {
     @include font-styles($font-bold, 3.75rem, 4.25rem, 700);
   }
+
   @include for--mobile {
     @include font-styles($font-regular, 1.5rem, 2rem, 700);
   }
@@ -16,9 +18,11 @@ h2 {
   @include for--desktop {
     @include font-styles($font-bold, 2.25rem, 2.75rem, 700);
   }
+
   @include for--tablet {
     @include font-styles($font-bold, 2.25rem, 2.75rem, 600);
   }
+
   @include for--mobile {
     @include font-styles($font-regular, 1.875rem, 2rem, 700);
   }
@@ -28,22 +32,28 @@ h3 {
   @include for--desktop {
     @include font-styles($font-bold, 1.5rem, 2rem, 600);
   }
+
   @include for--tablet {
     @include font-styles($font-regular, 1rem, 1.5rem, lighter);
   }
+
   @include for--mobile {
     @include font-styles($font-bold, 1rem, 1.375rem, 500);
   }
 }
 
-.font__body, h4, p {
-    @include for--desktop {
+.font__body,
+h4,
+p {
+  @include for--desktop {
     @include font-styles($font-regular, 0.875rem, 1.375rem, 400);
-    }
-    @include for--tablet {
+  }
+
+  @include for--tablet {
     @include font-styles($font-regular, 0.875rem, 1.375rem, 400);
-    }
-    @include for--mobile {
+  }
+
+  @include for--mobile {
     @include font-styles($font-regular, 0.75rem, 1.25rem, 400);
-    }
-    }
+  }
+}
