--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,111 +1,100 @@
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
 
-.hero{
+.hero {
   &__cover-b {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../assets/images/hero-shows.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    margin: 80px 0 0 0;
+    height: 80vw;
+    position: relative;
+
+    @include for--tablet {
+      height: 50vw;
+    }
+
+    &--organizer {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background-image: url(../assets/images/hero-shows.jpg);
-      background-position: center;
-      background-size: cover;
-      width: 100%;
-      margin: 80px 0 0 0;
-      height: 80vw;
-      position: relative;
-      @include for--tablet{
-        height: 50vw;
+      justify-content: flex-start;
+      color: #fff;
+      align-items: flex-start;
+      width: 90vw;
+
+      @include for--mobile {
+        flex-direction: column;
       }
 
-        &--organizer{
-          display: flex;
-          justify-content: flex-start;
-          color: #fff;
-          align-items: flex-start;
-          width: 90vw;
+      @include for--tablet {
+        display: flex;
+        justify-content: center;
+        color: #fff;
+        align-items: center;
+        width: 90vw;
+      }
 
-          @include for--mobile{
+      &--item {
+        margin-top: 20px;
+        position: relative;
+        z-index: 2;
 
-            flex-direction: column;
-          
-          }
-
-          @include for--tablet {
-            display: flex;
-            justify-content: center;
-            color: #fff;
-            align-items: center;
-            width: 90vw;
-          }
-         
-        
-          &--item{
-            margin-top: 20px;
-            position:relative;
-            z-index: 2;
-            @include for--desktop{
-
-          }
-
+        @include for--desktop {
         }
-          &:before {
-              content: "";
-              position: absolute;
-              top: 0;
-              left: 0;
-              right: 0;
-              bottom: 0;
-              background-color: rgba(50, 50, 50, 0.5);
-              //z-index: 1;
-          }
-  @include for--mobile{
-      padding-bottom: 1.5rem;
-      margin-bottom: 1.5rem;
-  }
-}
-  &--title{
-    
+
+      }
+
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(50, 50, 50, 0.5);
+      }
+
+      @include for--mobile {
+        padding-bottom: 1.5rem;
+        margin-bottom: 1.5rem;
+      }
+    }
+
+    &--title {
       padding-top: 2vw;
       color: $primary__band-white;
-      position:relative;
+      position: relative;
       z-index: 2;
-      @include for--tablet{
 
+      @include for--tablet {
       }
-      &--pre-hero{
-        position:relative;
+
+      &--pre-hero {
+        position: relative;
         z-index: 2;
         font-size: 1rem;
         font-weight: 300;
-        @include for--tablet{
-
-        }
-
-
-
+        @include for--tablet {}
       }
-  }
+    }
   }
 }
-.soundcloud {
 
+.soundcloud {
   margin: 5vw 0vw 0vw 0vw;
   display: flex;
-  position:relative;
+  position: relative;
   z-index: 2;
 
-  @include for--tablet{
-
+  @include for--tablet {
     height: 180px;
     width: 400px;
     padding-left: 10vw;
-
   }
-
- 
-
-
 }
 
 .show {
@@ -115,62 +104,64 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   @include for--tablet {
-    transition: ease-in-out 1s;      
+    transition: ease-in-out 1s;
     padding: 2.5vw 0vw 0vw 5vw;
     width: 100%;
     align-items: flex-start;
   }
-    
-  @include for--desktop {
-  transition: ease-in-out 1s;      
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
 
-  &-date, &-venue, &-location {
+  @include for--desktop {
+    transition: ease-in-out 1s;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+
+  &-date,
+  &-venue,
+  &-location {
     font-size: 1rem;
     text-align: left;
-    
-    color:black;
+    color: black;
     width: 100%;
     min-width: 10rem;
     max-height: 1rem;
 
-    @include for--tablet{
+    @include for--tablet {
       font-size: 0.875rem;
       text-align: left;
       padding: 2rem 1rem 2rem 1rem;
       color: black;
       width: 100%;
       min-width: 3rem;
-      padding: 2rem 2rem 2rem 1rem ;
+      padding: 2rem 2rem 2rem 1rem;
     }
   }
-  &__title{
+
+  &__title {
     width: 50vw;
 
-    @include for--mobile{
+    @include for--mobile {
       font-family: "Avenir Demi";
       font-size: 2rem;
       margin-left: -3rem;
     }
-    @include for--tablet{
+
+    @include for--tablet {
       width: 20vw;
-
     }
-
-
   }
 
   &-date {
     font-weight: bold;
-    color:#000
+    color: #000
   }
-    &-date:hover {
-      color: #000;
-    }
+
+  &-date:hover {
+    color: #000;
+  }
 }
 
 .shows-container {
@@ -180,21 +171,15 @@
   align-items: center;
   margin: 0 20px;
   padding: 20px 0;
-
   font-size: 18px;
   max-width: 100%;
-
   font-family: 'Avenir Regular', sans-serif;
   font-size: 1.5rem;
   line-height: 1rem;
   font-weight: 300;
-  
-  button, .button--grid {
-    @include for--mobile{
-      width: 85vw;
-    }
-  
 
+  button,
+  .button--grid {
     display: flex;
     justify-content: center;
     padding: 1rem 1rem;
@@ -207,47 +192,45 @@
     color:#fff;
     background-color: $primary__band-gray;
 
+    @include for--mobile {
+      width: 85vw;
+    }
+
     &:hover {
       background-color: $secondary__band-black;
-      
     }
-    
+  }
 
-  } 
-  
   h1 {
     text-align: left;
     margin-right: auto;
   }
-  
+
   .show-grid {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 60vw;
     overflow: clip;
-    @include for--tablet{
+
+    @include for--tablet {
       width: 85vw;
-
     }
-    @include for--desktop{
-      width: 70vw;
 
+    @include for--desktop {
+      width: 70vw;
     }
 
     .show-column {
       display: flex;
       flex-direction: column;
       align-items: start;
-     
-
       margin-left: 10px;
       margin-right: 10px;
       padding-bottom: 20px;
-      z-index: 1 ;
-  
+      z-index: 1;
 
-      @include for--tablet{
+      @include for--tablet {
         display: flex;
         flex-direction: column;
         align-items: start;
@@ -258,105 +241,96 @@
 
       &-title {
 
-        @include for--tablet{
-        font-size: 1rem;
-        margin-bottom: 1rem;
-        padding-left: 2rem;
-        color: $secondary__band-mercury;
-      
-      }
-
-        &-ticket{
+        @include for--tablet {
           font-size: 1rem;
           margin-bottom: 1rem;
           padding-left: 2rem;
-          color:transparent;
+          color: $secondary__band-mercury;
         }
-        
+
+        &-ticket {
+          font-size: 1rem;
+          margin-bottom: 1rem;
+          padding-left: 2rem;
+          color: transparent;
+        }
+
       }
+
       .row-divider {
         width: 500%;
         border-bottom: 1px solid $secondary__band-mercury;
         margin-bottom: 10px;
-
       }
     }
   }
 }
 
-    .show-mobile {
+.show-mobile {
+  @include for--mobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    width: 85vw;
+
+    .show-column-title {
       @include for--mobile {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      padding: 20px;
-      margin-bottom: 20px;
-      position: relative;
-      width: 85vw;
-
-      .show-column-title {
-        @include for--mobile{
-          color: $primary__band-silver;
-          font-size: 1rem;
-          margin-bottom: 0.2rem;
-          padding-left: 0rem;
-        }
-      }
-
-
-
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background-color: #ccc;
-      }
-
-      .show-date {
-        font-size: 1rem;
-        color: $primary__band-gray;
-        margin-bottom: 10px;
-
-      
-      }
-      .show-venue {
-
-      font-size: 1rem;
-        color: $primary__band-gray;
-        margin-bottom: 10px;
-
-      }
-
-      .show-divider {
-        margin: 10px 0;
         color: $primary__band-silver;
-   
-      }
-
-      .show-location {
         font-size: 1rem;
-        color: $primary__band-gray;
-        margin-bottom: 10px;
-      }
-
-      button {
-        margin-top: auto;
+        margin-bottom: 0.2rem;
+        padding-left: 0rem;
       }
     }
+
+
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #ccc;
+    }
+
+    .show-date {
+      font-size: 1rem;
+      color: $primary__band-gray;
+      margin-bottom: 10px;
+
+
+    }
+
+    .show-venue {
+      font-size: 1rem;
+      color: $primary__band-gray;
+      margin-bottom: 10px;
+    }
+
+    .show-divider {
+      margin: 10px 0;
+      color: $primary__band-silver;
+    }
+
+    .show-location {
+      font-size: 1rem;
+      color: $primary__band-gray;
+      margin-bottom: 10px;
+    }
   }
+}
 
 .hover {
   transition: 0.5s;
   z-index: 9999;
   background-color: $secondary__band-mercury;
-
   width: 800%;
-  
-
 }
+
 .clicked {
   transition: 0.5s;
   z-index: 99999;
