--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,4 +1,7 @@
 @use './partials/fonts' as *;
+@use './partials/mixins' as*;
+
+
 
 h1 {
   @include for--desktop {
@@ -42,9 +45,7 @@ h3 {
   }
 }
 
-.font__body,
-h4,
-p {
+.font__body, h4, p, a {
   @include for--desktop {
     @include font-styles($font-regular, 0.875rem, 1.375rem, 400);
   }
@@ -54,6 +55,6 @@ p {
   }
 
   @include for--mobile {
-    @include font-styles($font-regular, 0.75rem, 1.25rem, 400);
+    @include font-styles($font-regular, 0.875rem, 1.25rem, 400);
   }
 }
