--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -1,211 +1,11 @@
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
-
-// hero section
-
-.hero {
-  &__cover-b {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../assets/images/hero-shows.jpg);
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    margin: 80px 0 0 0;
-    height: 100vw;
-    position: relative;
-
-    @include for--tablet {
-      height: 50vw;
-    }
-
-    &--organizer {
-      display: flex;
-      justify-content: flex-start;
-      color: #fff;
-      align-items: flex-start;
-      width: 90vw;
-
-      @include for--mobile {
-        flex-direction: column;
-      }
-
-      @include for--tablet {
-        display: flex;
-        justify-content: center;
-        color: #fff;
-        align-items: center;
-        width: 90vw;
-      }
-
-      &--item {
-        margin-top: 20px;
-        position: relative;
-        z-index: 2;
-
-        @include for--desktop {
-        }
-
-      }
-
-      &:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(50, 50, 50, 0.5);
-      }
-
-      @include for--mobile {
-        padding-bottom: 1.5rem;
-        margin-bottom: 1.5rem;
-      }
-    }
-
-    &--title {
-      padding-top: 2vw;
-      color: $primary__band-white;
-      position: relative;
-      z-index: 2;
-
-      @include for--tablet {
-      }
-
-      &--pre-hero {
-        position: relative;
-        z-index: 2;
-        font-size: 1rem;
-        font-weight: 300;
-        @include for--tablet {}
-      }
-    }
-  }
-}
-
-.soundcloud {
-  margin: 5vw 0vw 0vw 0vw;
-  display: flex;
-  position: relative;
-  z-index: 2;
-
-  @include for--tablet {
-    height: 180px;
-    width: 400px;
-    padding-left: 10vw;
-  }
-}
-
-// start of body section
-
-.show{
-  padding: 5vw 2vw;
-  border-bottom: 1px solid $primary__band-silver;
-  
-  @include for--tablet{
-    padding: 0vw 2vw;
-    display: flex;
-    flex-direction: row;
-  }
-  &__date{
-    font-weight: 700;
-    
-  }
-  &__date, &__venue, &__location {
-    @include for--tablet{
-      width: 15vw;
-    }
-    
-    &--title{
-      color: $primary__band-silver;
-      font-size: 0.875rem;
-      @include for--tablet{
-        visibility: hidden;
-      }
-    }
-
-  }
-
-  &__title{
-    padding: 2vw;
-    font-size: 2rem;
-    font-weight: 700;
-    font-family: "Avenir Demi", sans-serif;
-    @include for--desktop{
-      padding-right: 5vw;
-    }
-    &--grid{
-    @include for--mobile{
-      display: none;
-    }
-
-    @include for--tablet{
-      padding: 2vw 0vw 0vw 2vw;
-      display: flex;
-      flex-direction: row;
-      &--desktop{
-        display: flex;
-        width: 15vw;
-        font-family: "Avenir Demi";
-        font-size: 1rem;
-        color: $primary__band-silver;
-
-      }
-    }
-    
-  }
-
- 
-
-  }
-}
-
-.shows-container {
-  font-family: "Avenir Regular", sans-serif;
-  line-height: 2rem;
-  font-weight: 300;
-  margin-bottom: 2vw;
-
-  button,
-  .button--grid {
-
-    padding: 1rem 1rem;
-    margin: 1rem 0rem;
-
-    border: none;
-    font-size: 20px;
-    font-weight: 700;
-    width: 15vw;
-    min-width: 12.5rem;
-    border-radius: 5px;
-    color:#fff;
-    background-color: $primary__band-gray;
-
-    @include for--mobile {
-      width: 100%;
-    }
-
-    &:hover {
-      background-color: $secondary__band-black;
-    }
-  }
+@use './partials/global'as*;
+@use './partials/nav'as*;
+@use './partials/hero'as*;
+@use './partials/footer'as*;
+@use './partials/fonts'as*;
+@use './partials/shows'as*;
 
 
-.hover {
-  transition: 0.5s;
-  z-index: 9999;
-  background-color: $secondary__band-mercury;
-  width: 800%;
-}
 
-.clicked {
-  transition: 0.5s;
-  z-index: 99999;
-  background-color: $primary__band-silver;
-  width: 800%;
-  color: $secondary__band-black
-}
-}
